--- a/storyboard/tests/fixtures/valid/image_templates.yaml
+++ b/storyboard/tests/fixtures/valid/image_templates.yaml
@@ -1,2 +1,2 @@
 _simple_template:
-  instructions: "Test instruction with [image $char_ref] and backdrop {$backdrop}"
+  instructions: "Test instruction with {image $char_ref} and backdrop {$backdrop}"
